Adjust width and length of arrow, add example of thin arrow

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         const board = document.getElementById("board");
         let arrows = [
           { from: "c7", to: "f4" },
-          { from: "b3", to: "f4", brush: "foobar" },
+          { from: "b3", to: "f4", brush: "foobar", weight: "light" },
           { from: "g7", to: "e3", brush: "secondary" },
         ];
         let game = new Chess();
