Fix cross-browser bugs: blend mode and SVG display in demo page

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <template id="svg-e4">
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        class="top-auto left-auto w-1/3 h-1/3 bottom-1 right-1"
+        class="top-auto left-auto w-1/3 bottom-1 right-1"
         role="img"
         fill="none"
         viewBox="0 0 24 24"
