--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -16,7 +16,7 @@
       </h1>
       <nav>
         
-        <ul class="flex items-stretch text-base gap-x-6">
+        <ul class="flex flex-wrap items-stretch justify-center text-base gap-x-6">
             <li class="py-2">
               <a class="underline text-zinc-800 dark:text-zinc-100 underline-offset-4 decoration-green-600 dark:decoration-green-500 decoration-2" href="/gchessboard/tutorial/">Tutorial</a>
             </li>
