Fix handling of overlapping arrows in demo file

--- a/index.html
+++ b/index.html
@@ -124,13 +124,12 @@
             `movefinished: ${e.detail.piece.color} ${e.detail.piece.pieceType} from ${e.detail.from}-${e.detail.to}`
           );
           window.placement = board.fen;
-          arrows = arrows
-            .filter(
-              (a) =>
-                !window.movingArrowStartSquare ||
-                a.from !== window.movingArrowStartSquare
-            )
-            .concat([{ from: e.detail.to, to: "e4" }]);
+          const movingArrow = { from: e.detail.to, to: "e4" }
+          if (!window.movingArrowStartSquare) {
+            arrows = arrows.concat([movingArrow])
+          } else {
+            arrows[arrows.length - 1] = movingArrow
+          }
           window.movingArrowStartSquare = e.detail.to;
           if (window.showSvg) {
             board.arrows = arrows;
