deploy: 7c0f8248ea01633b858c855725727319199eef70

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -253,7 +253,7 @@ board.addEventListener("movefinished", (e) => {
     </main>
     <footer class="pt-4 pb-8 space-y-2 text-center border-t border-zinc-400 dark:border-zinc-600 justify-self-stretch text-zinc-600 dark:text-zinc-200">
       <p>
-        By <a href="https://twitter.com/mganjoo" class="font-semibold underline-offset-1 text-zinc-800 dark:text-white hover:underline">Milind Ganjoo</a> &middot;
+        By <a href="https://www.linkedin.com/in/mganjoo" class="font-semibold underline-offset-1 text-zinc-800 dark:text-white hover:underline">Milind Ganjoo</a> &middot;
         Source code on <a href="https://github.com/mganjoo/gchessboard" class="font-semibold underline-offset-1 text-zinc-800 dark:text-white hover:underline">GitHub</a>
       </p>
       <p>
